Fix search and filter spacing

--- a/ui/src/components/Filter/Filter.css
+++ b/ui/src/components/Filter/Filter.css
@@ -1,3 +1,7 @@
+.filter-area {
+  padding: 0 1rem 1rem 1rem;
+}
+
 .filters {
   grid-column-start: 1;
   grid-column-end: 3;
@@ -13,6 +17,6 @@
 }
 
 .filter {
-  margin: 0.5rem 0;
-  padding: 0 1rem;
+  margin: 0;
+  padding: 0;
 }
