--- a/ui/src/components/SearchArea/SearchArea.css
+++ b/ui/src/components/SearchArea/SearchArea.css
@@ -3,9 +3,6 @@
   margin: 0 0 0.75rem 0;
   border-radius: 0.5rem;
   box-shadow: black 0 0 3px;
-
-  display: grid;
-  grid-template-columns: 3.5rem 1fr;
 }
 
 .search-area button {
@@ -22,6 +19,11 @@
 }
 
 .search-bar {
+  display: grid;
+  grid-template-columns: 3.5rem 1fr;
+}
+
+.search-box {
   border-radius: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
@@ -31,6 +33,6 @@
   margin: 0;
 }
 
-.search-bar:focus {
+.search-box:focus {
   outline: none;
 }
